--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
   </head>
 
   <body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     {% block body %}{% endblock %}
 
   </body>
